--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/app/phpspreadsheet/
+/u449664.html
+/u449664_laravel_dump.sql
+/vendor.zip
+/vendor_.tar
+/vendor_bak.tar
 /node_modules
 /public/hot
 /public/storage
